Add runtime Gemfile.lock generation for SBOM scanning
- Add run-bundle-install parameter to enable bundle install before SBOM scan
- Products without committed Gemfile.lock can now generate it at runtime
- Add Ruby setup step in ci-build job for Ruby projects
- Pass run-bundle-install parameter through workflow chain

--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -732,6 +732,12 @@ jobs:
       #     - name: Build for Ruby binary 
       # simple bundle install to generate gemlock(puts them in directory vendor/bundle, and uses actual gemspec for deployment to get multi-architecture ), then build gem
       # https://bundler.io/man/bundle-install.1.html
+      - name: Set up Ruby
+        if: ${{ inputs.language == 'ruby' && inputs.build-profile == 'cli' }}
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.4'
+          
       - name: 'Ruby build'
         if: ${{ inputs.language == 'ruby' && inputs.build-profile == 'cli' }}        
         run: |
