--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -732,18 +732,17 @@ jobs:
       #     - name: Build for Ruby binary 
       # simple bundle install to generate gemlock(puts them in directory vendor/bundle, and uses actual gemspec for deployment to get multi-architecture ), then build gem
       # https://bundler.io/man/bundle-install.1.html
-      - name: Set up Ruby
-        if: ${{ inputs.run-bundle-install == true }}
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.4'
-          
-      - name: 'Generate Gemfile.lock for SBOM scanning'
-        if: ${{ inputs.run-bundle-install == true }}        
+      - name: 'Ruby build'
+        if: ${{ inputs.language == 'ruby' && inputs.build-profile == 'cli' }}        
         run: |
-          echo "Generating Gemfile.lock for SBOM scanning"
-          bundle install
-        continue-on-error: true
+          mkdir -p vendor
+          if [ -f "Gemfile.lock" ]; then
+            bundle install --deployment
+          else
+            echo "No .gemlock file found, creating it now"
+            bundle install --path vendor/bundle --deployment
+          fi
+          bundle exec rake build
       
    
     # - name: Configure git for private modules
