Fix Ruby build: remove --deployment flag when Gemfile.lock doesn't exist
- Remove --deployment flag from bundle install when no Gemfile.lock exists
- --deployment flag requires existing Gemfile.lock, causing exit code 16
- Fix typo: .gemlock -> Gemfile.lock in echo message

--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -744,8 +744,8 @@ jobs:
           if [ -f "Gemfile.lock" ]; then
             bundle install --deployment
           else
-            echo "No .gemlock file found, creating it now"
-            bundle install --path vendor/bundle --deployment
+            echo "No Gemfile.lock found, creating it now"
+            bundle install --path vendor/bundle
           fi
           bundle exec rake build
       
