--- a/.github/workflows/cd-download-grype-scan.yml
+++ b/.github/workflows/cd-download-grype-scan.yml
@@ -1,5 +1,15 @@
 # CD pipeline to download packages from Commercial and/or Community downloads API and run Grype security scan
 
+# test inputs:
+    # product: chef
+    # product-version: 19.0.6
+    # channel: stable   
+    # architecture: x86_64
+    # os-platform: both (ubuntu and windows)
+    # os-platform-version: not specified
+    # download-site: commercial
+    # license-id: (not specified, uses secret)
+
 # called ad-hoc (dispatch) only
 #
 # performs the following actions:
@@ -73,7 +83,7 @@
 #   }
 # }
 
-name: CD Download Customer Packages and Grype Scan
+name: CD Scan downloadable customer packages with grype
 
 on:
   workflow_dispatch:
@@ -205,25 +215,10 @@ jobs:
           echo "*************************************************************"
   
   grype-scan-linux:
-    name: 'Grype scan of customer-downloadable packages'
+    name: 'Linux grype scan of customer-downloadable packages'
     runs-on: ubuntu-latest  # TODO: make this a versioned OS strategy later
     if: ${{ success() && (inputs.test-runner == 'ubuntu-latest'  || inputs.test-runner == 'both') }}
     steps:
-    #   - name: Install Chef Habitat (MacOS and Linux)
-    #     run: |
-    #       curl https://raw.githubusercontent.com/habitat-sh/habitat/main/components/hab/install.sh | sudo bash
-
-    #   - name: Configure Habitat (MacOS and Linux)
-    #     run: |
-    #       # Add Habitat to PATH (for current session and future steps if needed, though install.sh usually handles symlinks)
-    #       echo "/hab/bin" >> $GITHUB_PATH
-          
-    #       # Accept the license
-    #       echo "HAB_LICENSE=accept-no-persist" >> $GITHUB_ENV
-          
-    #       # Create the necessary directory structure for license file
-    #       sudo mkdir -p /hab/accepted-licenses/
-    #       sudo touch /hab/accepted-licenses/habitat
       - name: Generate filename prefix, download URL and license-id as environment variables for later steps
         run: |
           FILE_PREFIX=$(echo "${{ inputs.product }}${{ env.DEFAULT_SEPARATOR }}${{ inputs.product-version }}${{ env.DEFAULT_SEPARATOR }}ubuntu" | sed 's|/|-|g')-$(date +%Y%m%d%H%M%S)
@@ -245,7 +240,8 @@ jobs:
           else
             echo "Using license ID from workflow input"
           fi
-
+          echo "LICENSE_ID=${LICENSE_ID}" >> $GITHUB_ENV
+          
       - name: Install Grype (ubuntu-latest)
         continue-on-error: true
         run: |
@@ -280,39 +276,6 @@ jobs:
 
           ls -l /tmp/extracted_packages
 
-    #   - name: Install Habitat Package under test (example core/nginx on MacOS and Linux)
-    #     run: |
-    #       PACKAGE="${{ inputs.publish-habitat-hab_package }}"
-    #       if [ -n "${{ inputs.publish-habitat-hab_version }}" ]; then
-    #         PACKAGE="${PACKAGE}/${{ inputs.publish-habitat-hab_version }}"
-    #       fi
-    #       if [ -n "${{ inputs.publish-habitat-hab_release }}" ]; then
-    #         PACKAGE="${PACKAGE}/${{ inputs.publish-habitat-hab_release }}"
-    #       fi
-          
-    #       INSTALL_CMD="sudo hab pkg install ${PACKAGE}"
-          
-    #       if [ -n "${{ inputs.publish-habitat-hab_channel }}" ]; then
-    #         INSTALL_CMD="${INSTALL_CMD} --channel ${{ inputs.publish-habitat-hab_channel }}"
-    #       fi
-          
-    #       AUTH_TOKEN="${{ inputs.publish-habitat-hab_auth_token }}"
-    #       if [ -z "${AUTH_TOKEN}" ]; then
-    #         AUTH_TOKEN="${{ secrets.HAB_PUBLIC_BLDR_PAT }}"
-    #         echo "Using token from repository secret"
-    #       else
-    #         echo "Using token from workflow input"
-    #       fi
-    #       # if [ -n "${AUTH_TOKEN}" ]; then
-    #       #   INSTALL_CMD="${INSTALL_CMD} --auth ${AUTH_TOKEN}"
-    #       # fi
-          
-    #       echo "Installing: ${INSTALL_CMD}"
-    #       eval ${INSTALL_CMD}
-
-# 5. grype dir:.
-# 6. upload the vulnerability scan artifact
-
       - name: Run Grype scan on extracted directory
         timeout-minutes: 15 # Sets a 15-minute timeout for this specific step
         run: |
@@ -325,20 +288,6 @@ jobs:
           grype dir:/tmp/extracted_packages --name ${{ inputs.product }} > $OUTPUT_FILE
           echo "OUTPUT_FILE=$OUTPUT_FILE" >> $GITHUB_ENV
 
-    #   - name: Run Grype Scan on Habitat Package
-    #     timeout-minutes: 15 # Sets a 15-minute timeout for this specific step
-    #     run: |
-    #       # Find the installed package path. 'hab pkg path' returns the path to the latest installed version.
-    #       PKG_PATH=$(hab pkg path ${{ inputs.publish-habitat-hab_package }})
-    #       # run grype in runner
-    #       grype dir:$PKG_PATH --name ${{ inputs.publish-habitat-hab_package }} 
-    #       # run grype to output to file (which is uploaded to the job as an artifact)
-    #       OUTPUT_FILE="grype-results-ubuntu-${{ env.FILE_PREFIX }}.txt"
-    #       OUTPUT_FILE="${OUTPUT_FILE//\//-}"
-    #       echo $OUTPUT_FILE
-    #       grype dir:$PKG_PATH --name ${{ inputs.publish-habitat-hab_package }} > $OUTPUT_FILE
-    #       echo "OUTPUT_FILE=$OUTPUT_FILE" >> $GITHUB_ENV
-          
       - name: Upload Grype Scan Results
         uses: actions/upload-artifact@v4
         with:
@@ -346,32 +295,34 @@ jobs:
           path: ${{ env.OUTPUT_FILE }}
 
   grype-scan-windows:
-    name: 'Grype scan of customer-downloadable packages'
+    name: 'Windows grype scan of customer-downloadable packages'
     runs-on: windows-latest  # TODO: make this a versioned OS strategy later
     if: ${{ success() && (inputs.test-runner == 'windows-latest'  || inputs.test-runner == 'both') }}
     steps:
       - name: Generate filename prefix, download URL and license-id as environment variables for later steps
-        # shell: bash || pwsh
+        shell: pwsh
         run: |
-          FILE_PREFIX=$(echo "${{ inputs.product }}${{ env.DEFAULT_SEPARATOR }}${{ inputs.product-version }}${{ env.DEFAULT_SEPARATOR }}windows" | sed 's|/|-|g')-$(date +%Y%m%d%H%M%S)
-          echo "FILE_PREFIX=${FILE_PREFIX}" >> $GITHUB_ENV
-          echo "Generated FILE_PREFIX: ${FILE_PREFIX}"
+          $FilePrefix = "${{ inputs.product }}${{ env.DEFAULT_SEPARATOR }}${{ inputs.product-version }}${{ env.DEFAULT_SEPARATOR }}windows" -replace '/', '-'
+          $FilePrefix = "${FilePrefix}-$(Get-Date -Format 'yyyyMMddHHmmss')"
+          echo "FILE_PREFIX=$FilePrefix" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Host "Generated FILE_PREFIX: $FilePrefix"
 
-          DOWNLOAD_URL="https://chefdownload-commercial.chef.io"
-          if [ ${{ inputs.download-site }} = "community" ]; then
-            DOWNLOAD_URL="https://chefdownload-community.chef.io"
-          fi
-          echo "DOWNLOAD_URL=${DOWNLOAD_URL}" >> $GITHUB_ENV
-          echo "DOWNLOAD_URL is set to ${DOWNLOAD_URL}"
+          $DownloadUrl = "https://chefdownload-commercial.chef.io"
+          if ("${{ inputs.download-site }}" -eq "community") {
+            $DownloadUrl = "https://chefdownload-community.chef.io"
+          }
+          echo "DOWNLOAD_URL=$DownloadUrl" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Host "DOWNLOAD_URL is set to $DownloadUrl"
 
           # get the license_id from input or secret
-          LICENSE_ID="${{ inputs.license-id }}"   
-          if [ -z "${LICENSE_ID}" ]; then
-            LICENSE_ID="${{ secrets.GA_DOWNLOAD_GRYPE_LICENSE_ID }}"
-            echo "Using license ID from repository secret"
-          else
-            echo "Using license ID from workflow input"
-          fi
+          $LicenseId = "${{ inputs.license-id }}"
+          if ([string]::IsNullOrEmpty($LicenseId)) {
+            $LicenseId = "${{ secrets.GA_DOWNLOAD_GRYPE_LICENSE_ID }}"
+            Write-Host "Using license ID from repository secret"
+          } else {
+            Write-Host "Using license ID from workflow input"
+          }
+          echo "LICENSE_ID=$LicenseId" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Install Grype (windows-latest)
         continue-on-error: true
@@ -422,36 +373,6 @@ jobs:
 
           Get-ChildItem -Path $ExtractPath
 
-    #   - name: Install Habitat Package under test (example core/nginx on MacOS and Linux)
-    #     run: |
-    #       PACKAGE="${{ inputs.publish-habitat-hab_package }}"
-    #       if [ -n "${{ inputs.publish-habitat-hab_version }}" ]; then
-    #         PACKAGE="${PACKAGE}/${{ inputs.publish-habitat-hab_version }}"
-    #       fi
-    #       if [ -n "${{ inputs.publish-habitat-hab_release }}" ]; then
-    #         PACKAGE="${PACKAGE}/${{ inputs.publish-habitat-hab_release }}"
-    #       fi
-          
-    #       INSTALL_CMD="sudo hab pkg install ${PACKAGE}"
-          
-    #       if [ -n "${{ inputs.publish-habitat-hab_channel }}" ]; then
-    #         INSTALL_CMD="${INSTALL_CMD} --channel ${{ inputs.publish-habitat-hab_channel }}"
-    #       fi
-          
-    #       AUTH_TOKEN="${{ inputs.publish-habitat-hab_auth_token }}"
-    #       if [ -z "${AUTH_TOKEN}" ]; then
-    #         AUTH_TOKEN="${{ secrets.HAB_PUBLIC_BLDR_PAT }}"
-    #         echo "Using token from repository secret"
-    #       else
-    #         echo "Using token from workflow input"
-    #       fi
-    #       # if [ -n "${AUTH_TOKEN}" ]; then
-    #       #   INSTALL_CMD="${INSTALL_CMD} --auth ${AUTH_TOKEN}"
-    #       # fi
-          
-    #       echo "Installing: ${INSTALL_CMD}"
-    #       eval ${INSTALL_CMD}
-
       - name: Run Grype scan on extracted directory
         timeout-minutes: 15 # Sets a 15-minute timeout for this specific step
         run: |
@@ -466,90 +387,9 @@ jobs:
           Write-Host $OutputFile
           grype dir:$ExtractPath --name ${{ inputs.product }} | Out-File -FilePath $OutputFile -Encoding utf8
           echo "OUTPUT_FILE=$OutputFile" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          
-#    - name: Run Grype Scan on Habitat Package (Windows)
-#         timeout-minutes: 15 # Sets a 15-minute timeout for this specific step
-#         run: |
-#           # Find the installed package path. 'hab pkg path' returns the path to the latest installed version.
-#           $PkgPath = hab pkg path ${{ inputs.publish-habitat-hab_package }}
-#           # run grype in runner
-#           grype dir:$PkgPath --name ${{ inputs.publish-habitat-hab_package }}
-#           # run grype to output to file (which is uploaded to the job as an artifact)
-#           $OutputFile = "grype-results-windows-${{ inputs.publish-habitat-hab_package }}.txt"
-#           $OutputFile = $OutputFile -replace '/', '-'
-#           Write-Host $OutputFile
-#           grype dir:$PkgPath --name ${{ inputs.publish-habitat-hab_package }} | Out-File -FilePath $OutputFile -Encoding utf8
-#           echo "OUTPUT_FILE=$OutputFile" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
                 
       - name: Upload Grype Scan Results
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.OUTPUT_FILE }}
           path: ${{ env.OUTPUT_FILE }}
-
-# --- IGNORE ---    
-  
-#   habitat-grype-scan-windows:
-#     name: 'Grype scan of Habitat packages (Windows)'
-#     runs-on: windows-latest
-#     if: ${{ success() && inputs.habitat-grype-scan == true && inputs.publish-habitat-runner_os == 'windows-latest' }}
-#     # TODO: make this a matrix operation 
-#     needs: habitat-publish
-#     steps:
-#       - name: Install Chef Habitat (Windows)
-#         run: |
-#           choco install habitat
-
-#           # Set-ExecutionPolicy Bypass -Scope Process -Force;
-#           # [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072;
-#           # iex ((New-Object System.Net.WebClient).DownloadString('https://raw.githubusercontent.com/habitat-sh/habitat/main/components/hab/install.ps1'))
-#           # $env:PATH += ";~\bin\hab-1.6.1245-20250905141844-x86_64-windows"
-#           # Write-Host "one"
-#           # ls ~/bin
-#           # Write-Host "two"
-#           # ls c:/users/runneradmin/bin
-#           # Write-Host "three"
-#           # ls c:/hab
-#           # ls "~\bin\hab-1.6.1245-20250905141844-x86_64-windows"
-          
-#           # Write-Host "end"
-#           hab --version
-      
-#       - name: Configure Habitat (Windows)
-#         run: |
-#           # Accept the license
-#           echo "HAB_LICENSE=accept-no-persist" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          
-#           # Create the necessary directory structure for license file
-#           New-Item -ItemType Directory -Force -Path "C:\hab\accepted-licenses"
-#           New-Item -ItemType File -Force -Path "C:\hab\accepted-licenses\habitat"
-          
-#       - name: Install Habitat Package under test (Windows)
-#         run: |
-#           $Package = "${{ inputs.publish-habitat-hab_package }}"
-#           if ("${{ inputs.publish-habitat-hab_version }}" -ne "") {
-#             $Package = "${Package}/${{ inputs.publish-habitat-hab_version }}"
-#           }
-#           if ("${{ inputs.publish-habitat-hab_release }}" -ne "") {
-#             $Package = "${Package}/${{ inputs.publish-habitat-hab_release }}"
-#           }
-          
-#           $InstallCmd = "hab pkg install ${Package}"
-          
-#           if ("${{ inputs.publish-habitat-hab_channel }}" -ne "") {
-#             $InstallCmd = "${InstallCmd} --channel ${{ inputs.publish-habitat-hab_channel }}"
-#           }
-          
-#           $AuthToken = "${{ inputs.publish-habitat-hab_auth_token }}"
-#           if ([string]::IsNullOrEmpty($AuthToken)) {
-#             $AuthToken = "${{ secrets.HAB_PUBLIC_BLDR_PAT }}"
-#             Write-Host "Using token from repository secret"
-#           } else {
-#             Write-Host "Using token from workflow input"
-#           }
-#           # if (-not [string]::IsNullOrEmpty($AuthToken)) {
-#           #   $InstallCmd = "${InstallCmd} --auth ${AuthToken}"
-#           # }
-          
-#           Write-Host "Installing: ${InstallCmd}"
-#           Invoke-Expression $InstallCmd
