--- a/.github/workflows/cd-download-grype-scan.yml
+++ b/.github/workflows/cd-download-grype-scan.yml
@@ -221,7 +221,7 @@ jobs:
     steps:
       - name: Generate filename prefix, download URL and license-id as environment variables for later steps
         run: |
-          FILE_PREFIX=$(echo "${{ inputs.product }}${{ env.DEFAULT_SEPARATOR }}${{ inputs.product-version }}${{ env.DEFAULT_SEPARATOR }}ubuntu" | sed 's|/|-|g')-$(date +%Y%m%d%H%M%S)
+          FILE_PREFIX=$(echo "grype${{ env.DEFAULT_SEPARATOR }}${{ inputs.product }}${{ env.DEFAULT_SEPARATOR }}${{ inputs.product-version }}${{ env.DEFAULT_SEPARATOR }}ubuntu" | sed 's|/|-|g')-$(date +%Y%m%d%H%M%S)
           echo "FILE_PREFIX=${FILE_PREFIX}" >> $GITHUB_ENV
           echo "Generated FILE_PREFIX: ${FILE_PREFIX}"
 
@@ -304,7 +304,7 @@ jobs:
           # run grype in runner
           grype dir:/tmp/extracted_packages --name ${{ inputs.product }} 
           # run grype to output to file (which is uploaded to the job as an artifact)
-          OUTPUT_FILE="grype-results-ubuntu-${{ env.FILE_PREFIX }}.txt"
+          OUTPUT_FILE="${{ env.FILE_PREFIX }}.txt"
           OUTPUT_FILE="${OUTPUT_FILE//\//-}"
           echo $OUTPUT_FILE
           grype dir:/tmp/extracted_packages --name ${{ inputs.product }} > $OUTPUT_FILE
@@ -324,7 +324,7 @@ jobs:
       - name: Generate filename prefix, download URL and license-id as environment variables for later steps
         shell: pwsh
         run: |
-          $FilePrefix = "${{ inputs.product }}${{ env.DEFAULT_SEPARATOR }}${{ inputs.product-version }}${{ env.DEFAULT_SEPARATOR }}windows" -replace '/', '-'
+          $FilePrefix = "grype${{ env.DEFAULT_SEPARATOR }}${{ inputs.product }}${{ env.DEFAULT_SEPARATOR }}${{ inputs.product-version }}${{ env.DEFAULT_SEPARATOR }}windows" -replace '/', '-'
           $FilePrefix = "${FilePrefix}-$(Get-Date -Format 'yyyyMMddHHmmss')"
           echo "FILE_PREFIX=$FilePrefix" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           Write-Host "Generated FILE_PREFIX: $FilePrefix"
@@ -385,7 +385,7 @@ jobs:
           }
   
           # Download the package
-          Invoke-WebRequest -Uri $DownloadUrl -OutFile "$env:TEMP\package_downloaded" -FollowRelLink
+          Invoke-WebRequest -Uri $DownloadUrl -OutFile "$env:TEMP\package_downloaded" -FollowRelocation
           
           # Handle package extraction/installation based on platform
           $ExtractPath = "$env:TEMP\extracted_packages"
@@ -430,7 +430,7 @@ jobs:
           grype dir:$ExtractPath --name ${{ inputs.product }}
           
           # run grype to output to file (which is uploaded to the job as an artifact)
-          $OutputFile = "grype-results-windows-${{ env.FILE_PREFIX }}.txt"
+          $OutputFile = "${{ env.FILE_PREFIX }}.txt"
           $OutputFile = $OutputFile -replace '/', '-'
           Write-Host $OutputFile
           grype dir:$ExtractPath --name ${{ inputs.product }} | Out-File -FilePath $OutputFile -Encoding utf8
